fixed spacing from home

--- a/Coding Project/client/src/components/SpaceTile/SpaceTile.css
+++ b/Coding Project/client/src/components/SpaceTile/SpaceTile.css
@@ -14,10 +14,7 @@
     margin-left: 1rem;
   }
 
-  Heart {
-    top: 0;
-    right: 0;
-  }
+
 
   .spacetile-image {
     width: 100%;
